<resources>
    <string name="app_name">RiverTracker</string>
    <string name="river_detail_alerts_string">alertString</string>
    <string name="river_detail_section_string">riverSectionString</string>
    <string name="river_detail_difficulty_string">riverDifficultyString</string>
    <string name="river_detail_state_string">stateString</string>
    <string name="river_detail_flow_string">riverFlowString</string>
    <string name="river_detail_description_string">riverDescriptionString</string>
    <string name="cfs">%d cfs</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_river_name">River Name</string>
    <string name="search_search">Search</string>
    <string name="search_section">River Section</string>
    <string name="river_difficulty">River Difficulty</string>
    <string name="search_title">Search For Rivers</string>
    <string name="cannot_connect">Cannot Load Rivers</string>
    <string name="search_rivers">Search Rivers</string>
    <string name="signup_edit_email">Enter Email</string>
    <string name="signup_edit_password">Enter Password</string>
    <string name="signup_edit_repassword">Re-Enter password</string>
    <string name="signup_text_signup">Sign Up</string>
    <string name="signup_no_account">Continue Without Account</string>
    <string name="login_login">Login</string>
    <string name="login_enter_email">Enter Email</string>
    <string name="login_enter_pass">Enter Password</string>
    <string name="favorite_button">Favorite</string>
    <string name="token_logout_error">Error. Sign in again</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="menu_item_river_list">River List</string>
    <string name="all_rivers">All Rivers</string>
    <string name="favorites">Favorites</string>
    <string name="all_rivers2">All Rivers</string>
    <string name="search_results">Search Results</string>
    <string name="map">Map</string>
    <string name="no_results">No results</string>
    <string-array name="difficulty_ratings">
        <item>All</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
    </string-array>
    <string-array name="states">
        <item>All</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="title_activity_river_map">Map</string>
    <string name="title_activity_river_maps">Map</string>
    <string name="view_on_map">View on Map</string>
    <string name="get_directions">Get Directions</string>
    <string name="view_details">View Details</string>
    <string name="your_name">Your name</string>
    <string name="river_favorited_toast">River favorited!</string>
    <string name="river_details_description_button">Description</string>
    <string name="river_detail_alerts">Alerts</string>
    <string name="river_detail_map_button">Map</string>
    <string name="river_title_description">Description</string>
    <string name="state">State</string>
    <string name="skip">Skip</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="complete_all_fields">Complete all Fields</string>
    <string name="mismatched_passwords">Mismatched passwords</string>
    <string name="login_failed">Login Failed</string>
    <string name="river_image">River Image</string>
    <string name="favorite_removed">Favorite Removed</string>
    <string name="max_cfs">Max cfs: %d</string>
    <string name="min_cfs">Min cfs: %d</string>
    <string name="weather">Weather</string>
    <string name="weather_conditions">Conditions: %s</string>
    <string name="weather_temp">Temperature: %s F</string>
    <string name="weather_wind">Wind: %s MPH</string>
</resources>
