<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.makman.rivertracker.Activities.SignUpActivity">
    <ImageView
        android:id="@+id/signup_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="#ff0000"/>
    <EditText
        android:id="@+id/signup_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/your_name" />
    <EditText
        android:id="@+id/signup_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:hint="@string/signup_edit_email"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_name_edit_text"
        />
    <EditText
        android:id="@+id/signup_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:hint="@string/signup_edit_password"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_edit_text_email"
        />
    <EditText
        android:id="@+id/signup_edit_text_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/signup_edit_repassword"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_edit_text_password"
        />

    <Button
        android:id="@+id/signup_button_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:textColor="#FFFFFF"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/login_login"/>

    <Button
        android:id="@+id/signup_button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:layout_above="@id/signup_button_have_account"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/signup_text_signup"
        />

    <Button
        android:id="@+id/signup_button_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_button_signup"
        android:layout_alignEnd="@id/signup_button_signup"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="#FFFFFF"
        android:text="@string/skip"
        android:layout_alignRight="@id/signup_button_signup" />

</RelativeLayout>
