<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.makman.rivertracker.RiverDetailViewActivity">

    <RelativeLayout
        android:id="@+id/river_details_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/river_details_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:text="@string/favorite_button"/>

    <ImageView
        android:id="@+id/river_details_image_view"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_below="@id/river_details_favorite_button"
        android:contentDescription="River Image" />

        <LinearLayout
            android:id="@+id/river_detail_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/river_details_image_view">

            <Button
                android:id="@+id/river_detail_description_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/river_details_description_button"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/river_detail_alert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/river_detail_alerts"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/river_detail_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/river_detail_map_button"
                android:layout_weight="1"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/river_detail_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/river_detail_linear_layout">
        </FrameLayout>

    </RelativeLayout>

</ScrollView>
